fix: Texts and ReadMe feat: Redirect for Netlify

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Currency Exchange</title>
-    <meta name="description" content="Web site created using create-react-app" />
+    <title>React TypScript Material</title>
+    <meta name="description" content="React + Material UI + Auth starter using TypeScript" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="theme-color" content="#ffffff" />
